--- a/packages/scrape/package.json
+++ b/packages/scrape/package.json
@@ -11,6 +11,12 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@endal/dom": "^0.0.0"
+    "@endal/dom": "^0.0.0",
+    "@endal/pickle": "^0.0.0",
+    "@endal/rule": "^0.0.0",
+    "@types/browserify": "^12.0.33",
+    "@types/puppeteer": "^0.13.2",
+    "browserify": "^14.5.0",
+    "puppeteer": "^0.13.0"
   }
 }
