--- a/packages/wcag/package.json
+++ b/packages/wcag/package.json
@@ -9,5 +9,8 @@
     "Kasper Isager <kki@siteimprove.com>"
   ],
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "prepare": "gulp build:wcag"
+  }
 }
