--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@babel/preset-env": "^7.0.0-beta.32",
     "@babel/preset-stage-2": "^7.0.0-beta.32",
     "@babel/preset-typescript": "^7.0.0-beta.32",
+    "glob": "^7.1.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^8.0.0-beta.0",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-newer": "^1.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.1.0",
     "lerna": "^2.5.1",
