--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -10,6 +10,9 @@
   ],
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "prepare": "gulp build:css"
+  },
   "dependencies": {
     "@endal/lang": "^0.0.0"
   }
