--- a/packages/jsx/package.json
+++ b/packages/jsx/package.json
@@ -10,6 +10,9 @@
   ],
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "prepare": "gulp build:jsx"
+  },
   "dependencies": {
     "@endal/dom": "^0.0.0"
   }
