--- a/packages/wcag/package.json
+++ b/packages/wcag/package.json
@@ -11,6 +11,10 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "prepare": "gulp build:wcag"
+    "prepare": "gulp locale:wcag && gulp build:wcag"
+  },
+  "dependencies": {
+    "@endal/dom": "^0.0.0",
+    "@endal/rule": "^0.0.0"
   }
 }
