--- a/package.json
+++ b/package.json
@@ -12,14 +12,10 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.32",
-    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.32",
-    "@babel/preset-env": "^7.0.0-beta.32",
-    "@babel/preset-stage-2": "^7.0.0-beta.32",
-    "@babel/preset-typescript": "^7.0.0-beta.32",
+    "ava": "^0.23.0",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^8.0.0-beta.0",
-    "gulp-load-plugins": "^1.5.0",
     "gulp-newer": "^1.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.1.0",
