--- a/packages/scrape/package.json
+++ b/packages/scrape/package.json
@@ -18,6 +18,7 @@
     "@endal/pickle": "^0.0.0",
     "@endal/rule": "^0.0.0",
     "@types/browserify": "^12.0.33",
+    "@types/node": "^8.0.53",
     "@types/puppeteer": "^0.13.2",
     "browserify": "^14.5.0",
     "puppeteer": "^0.13.0"
