--- a/packages/img/package.json
+++ b/packages/img/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "@endal/ml",
+  "name": "@endal/img",
   "version": "0.0.0",
   "description": "Endal!",
   "main": "dist/index.js",
   "types": "src/index.ts",
-  "repository": "https://github.com/siteimprove/endal/tree/master/packages/ml",
+  "repository": "https://github.com/siteimprove/endal/tree/master/packages/img",
   "contributors": [
     "Kasper Isager <kki@siteimprove.com>"
   ],
   "license": "MIT",
   "private": true,
   "scripts": {
-    "prepare": "gulp build:ml"
-  },
-  "dependencies": {
-    "@endal/img": "^0.0.0"
+    "prepare": "gulp build:img"
   }
 }
