--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "ava": "^0.23.0",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
+    "gulp-ava": "^0.18.0",
     "gulp-babel": "^8.0.0-beta.0",
+    "gulp-if": "^2.0.2",
     "gulp-newer": "^1.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.1.0",
+    "gulp-sourcemaps": "^2.6.1",
     "lerna": "^2.5.1",
     "tslint": "^5.8.0",
     "tslint-config-standard": "^7.0.0",
