--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.32",
+    "@types/sinon": "^4.0.0",
     "ava": "^0.23.0",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
@@ -27,6 +28,7 @@
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "lerna": "^2.5.1",
+    "sinon": "^4.1.2",
     "tslint": "^5.8.0",
     "tslint-config-standard": "^7.0.0",
     "typescript": "^2.6.1"
