--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "endal",
-  "description": "Endal!",
-  "repository": "https://github.com/siteimprove/endal",
+  "name": "alfa",
+  "description": "alfa!",
+  "repository": "https://github.com/siteimprove/alfa",
   "contributors": [
     "Kasper Isager <kki@siteimprove.com>"
   ],
