--- a/packages/ml/package.json
+++ b/packages/ml/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@endal/ml",
+  "name": "@alfa/ml",
   "version": "0.0.0",
-  "description": "Endal!",
+  "description": "alfa!",
   "main": "dist/index.js",
   "types": "src/index.ts",
-  "repository": "https://github.com/siteimprove/endal/tree/master/packages/ml",
+  "repository": "https://github.com/siteimprove/alfa/tree/master/packages/ml",
   "contributors": [
     "Kasper Isager <kki@siteimprove.com>"
   ],
@@ -14,6 +14,6 @@
     "prepare": "gulp build:ml"
   },
   "dependencies": {
-    "@endal/img": "^0.0.0"
+    "@alfa/img": "^0.0.0"
   }
 }
