--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@babel/core": "^7.0.0-beta.32",
     "@types/sinon": "^4.0.0",
     "ava": "^0.23.0",
+    "del": "^3.0.0",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
     "gulp-ava": "^0.18.0",
     "gulp-babel": "^8.0.0-beta.0",
-    "gulp-if": "^2.0.2",
+    "gulp-ignore": "^2.0.2",
     "gulp-newer": "^1.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.1.0",
