--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "gulp-ignore": "^2.0.2",
     "gulp-newer": "^1.3.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sequence": "^0.4.6",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "lerna": "^2.5.1",
+    "nyc": "^11.3.0",
     "sinon": "^4.1.2",
     "tslint": "^5.8.0",
     "tslint-config-standard": "^7.0.0",
