--- a/package.json
+++ b/package.json
@@ -8,33 +8,21 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "check": "tsc --project tsconfig.json",
-    "lint": "tslint --project tsconfig.json",
-    "prepare": "gulp build --silent"
   },
   "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
+    "@babel/code-frame": "^7.0.0-beta.36",
     "@babel/core": "^7.0.0-beta.35",
     "@types/sinon": "^4.1.2",
     "ava": "^0.24.0",
-    "del": "^3.0.0",
-    "glob": "^7.1.2",
-    "gulp": "^3.9.1",
-    "gulp-ava": "^0.18.0",
-    "gulp-babel": "^8.0.0-beta.0",
-    "gulp-ignore": "^2.0.2",
-    "gulp-newer": "^1.3.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sequence": "^0.4.6",
-    "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^2.6.1",
     "lerna": "^2.5.1",
     "nyc": "^11.3.0",
     "sinon": "^4.1.3",
     "tslint": "^5.8.0",
     "tslint-config-standard": "^7.0.0",
-    "typescript": "^2.6.2"
+    "typescript": "^2.6.2",
+    "wsk": "^1.0.1"
   }
 }
