--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   ],
   "license": "MIT",
   "private": true,
-  "scripts": {
-  },
+  "scripts": {},
   "workspaces": [
     "packages/*"
   ],
@@ -17,8 +16,11 @@
     "@babel/core": "^7.0.0-beta.35",
     "@types/sinon": "^4.1.2",
     "ava": "^0.24.0",
+    "globby": "^7.1.1",
     "lerna": "^2.5.1",
+    "mkdirp": "^0.5.1",
     "nyc": "^11.3.0",
+    "rimraf": "^2.6.2",
     "sinon": "^4.1.3",
     "tslint": "^5.8.0",
     "tslint-config-standard": "^7.0.0",
