--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "devDependencies": {
     "@babel/code-frame": "^7.0.0-beta.36",
     "@babel/core": "^7.0.0-beta.35",
-    "@types/sinon": "^4.1.2",
-    "ava": "^0.24.0",
+    "@babel/register": "^7.0.0-beta.36",
     "globby": "^7.1.1",
     "lerna": "^2.5.1",
     "mkdirp": "^0.5.1",
     "nyc": "^11.3.0",
     "rimraf": "^2.6.2",
-    "sinon": "^4.1.3",
+    "tap": "^11.0.1",
+    "tap-mocha-reporter": "^3.0.6",
     "tslint": "^5.8.0",
     "tslint-config-standard": "^7.0.0",
     "typescript": "^2.6.2",
