Test task updates

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "nyc": "^11.3.0",
     "rimraf": "^2.6.2",
     "tap": "^11.0.1",
-    "tap-mocha-reporter": "^3.0.6",
+    "tap-parser": "^7.0.0",
     "tslint": "^5.8.0",
     "tslint-config-standard": "^7.0.0",
     "typescript": "^2.6.2",
