--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/code-frame": "^7.0.0-beta.36",
     "@babel/core": "^7.0.0-beta.35",
     "@babel/register": "^7.0.0-beta.36",
+    "chalk": "^2.3.0",
     "globby": "^7.1.1",
     "lerna": "^2.5.1",
     "mkdirp": "^0.5.1",
