--- a/packages/act/package.json
+++ b/packages/act/package.json
@@ -17,5 +17,8 @@
   "dependencies": {
     "@alfa/rule": "^0.0.0",
     "@alfa/wcag": "^0.0.0"
+  },
+  "devDependencies": {
+    "@alfa/test": "^0.0.0"
   }
 }
