--- a/packages/pickle/package.json
+++ b/packages/pickle/package.json
@@ -17,5 +17,8 @@
     "@alfa/css": "^0.0.0",
     "@alfa/dom": "^0.0.0",
     "@alfa/layout": "^0.0.0"
+  },
+  "devDependencies": {
+    "@alfa/test": "^0.0.0"
   }
 }
