--- a/packages/wcag/package.json
+++ b/packages/wcag/package.json
@@ -16,5 +16,8 @@
   "dependencies": {
     "@alfa/dom": "^0.0.0",
     "@alfa/rule": "^0.0.0"
+  },
+  "devDependencies": {
+    "@alfa/test": "^0.0.0"
   }
 }
