--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@babel/register": "^7.0.0-beta.36",
     "chalk": "^2.3.0",
     "globby": "^7.1.1",
+    "hjson": "^3.1.0",
     "lerna": "^2.5.1",
     "mkdirp": "^0.5.1",
     "nyc": "^11.4.1",
     "rimraf": "^2.6.2",
+    "stringify-object": "^3.2.1",
     "tap": "^11.0.1",
     "tap-parser": "^7.0.0",
     "tslint": "^5.8.0",
