--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   ],
   "license": "MIT",
   "private": true,
-  "scripts": {},
+  "scripts": {
+    "prepare": "node build/build.js",
+    "start": "node build/watch.js"
+  },
   "workspaces": [
     "packages/*"
   ],
