Upgrade to Lerna 2.8.0

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
-  "lerna": "2.5.1",
+  "lerna": "2.8.0",
   "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "packages": ["packages/*"]
 }
