--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "stringify-object": "^3.2.1",
     "tap": "^11.0.1",
     "tap-parser": "^7.0.0",
+    "typedoc": "^0.9.0",
+    "typedoc-plugin-markdown": "^1.0.12",
     "typescript": "^2.6.2",
     "wsk": "^1.0.1"
   }
