--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -4,10 +4,9 @@
   "description": "alfa!",
   "main": "dist/index.js",
   "types": "src/index.ts",
-  "repository": "https://github.com/siteimprove/alfa/tree/master/packages/markdown",
-  "contributors": [
-    "Kasper Isager <kki@siteimprove.com>"
-  ],
+  "repository":
+    "https://github.com/siteimprove/alfa/tree/master/packages/markdown",
+  "contributors": ["Kasper Isager <kki@siteimprove.com>"],
   "license": "MIT",
   "private": true,
   "dependencies": {
