--- a/packages/act/package.json
+++ b/packages/act/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@alfa/markdown": "^0.0.0",
     "@alfa/rule": "^0.0.0",
     "@alfa/wcag": "^0.0.0"
   },
