--- a/package.json
+++ b/package.json
@@ -6,33 +6,26 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "prepare": "node build/build.js",
-    "test": "node build/test.js",
-    "start": "node build/watch.js",
-    "precommit": "node build/lint.js"
+    "prepare": "foreman build/build.ts",
+    "test": "foreman build/test.ts",
+    "start": "foreman build/watch.ts",
+    "precommit": "foreman build/lint.ts"
   },
   "workspaces": ["packages/*"],
   "devDependencies": {
-    "@babel/code-frame": "^7.0.0-beta.36",
-    "@babel/core": "^7.0.0-beta.35",
-    "@babel/register": "^7.0.0-beta.36",
-    "chalk": "^2.3.0",
-    "concordance": "^3.0.0",
-    "execa": "^0.9.0",
-    "globby": "^7.1.1",
+    "@foreman/api": "^1.0.0",
+    "@foreman/babel": "^1.0.0",
+    "@foreman/cli": "^1.0.0",
+    "@foreman/fs": "^1.0.0",
+    "@foreman/git": "^1.0.0",
+    "@foreman/notify": "^1.0.0",
+    "@foreman/path": "^1.0.0",
+    "@foreman/prettier": "^1.0.0",
+    "@foreman/tap": "^1.0.0",
+    "@foreman/typescript": "^1.0.0",
     "hjson": "^3.1.0",
     "husky": "^0.14.3",
     "lerna": "^2.8.0",
-    "mkdirp": "^0.5.1",
-    "nyc": "^11.4.1",
-    "prettier": "1.10.2",
-    "rimraf": "^2.6.2",
-    "stringify-object": "^3.2.1",
-    "tap": "^11.0.1",
-    "tap-parser": "^7.0.0",
-    "typedoc": "^0.9.0",
-    "typedoc-plugin-markdown": "^1.0.12",
-    "typescript": "^2.6.2",
-    "wsk": "^1.0.1"
+    "stringify-object": "^3.2.1"
   }
 }
