Make all packages TypeScript project roots

--- a/packages/act/package.json
+++ b/packages/act/package.json
@@ -14,6 +14,7 @@
     "@alfa/wcag": "^0.0.0"
   },
   "devDependencies": {
-    "@alfa/test": "^0.0.0"
+    "@alfa/test": "^0.0.0",
+    "typescript": "^2.7.2"
   }
 }
