--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "@alfa/test": "^0.0.0"
+    "@alfa/test": "^0.0.0",
+    "typescript": "^2.7.2"
   }
 }
