--- a/packages/html/package.json
+++ b/packages/html/package.json
@@ -12,6 +12,7 @@
     "@alfa/lang": "^0.0.0"
   },
   "devDependencies": {
-    "@alfa/test": "^0.0.0"
+    "@alfa/test": "^0.0.0",
+    "typescript": "^2.7.2"
   }
 }
