--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -15,6 +15,7 @@
     "vfile": "^2.3.0"
   },
   "devDependencies": {
-    "@alfa/test": "^0.0.0"
+    "@alfa/test": "^0.0.0",
+    "typescript": "^2.7.2"
   }
 }
