--- a/packages/pickle/package.json
+++ b/packages/pickle/package.json
@@ -15,6 +15,7 @@
     "@alfa/layout": "^0.0.0"
   },
   "devDependencies": {
-    "@alfa/test": "^0.0.0"
+    "@alfa/test": "^0.0.0",
+    "typescript": "^2.7.2"
   }
 }
