--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -12,6 +12,7 @@
     "moize": "^4.0.4"
   },
   "devDependencies": {
-    "@alfa/test": "^0.0.0"
+    "@alfa/test": "^0.0.0",
+    "typescript": "^2.7.2"
   }
 }
