--- a/packages/wcag/package.json
+++ b/packages/wcag/package.json
@@ -13,6 +13,7 @@
     "@alfa/rule": "^0.0.0"
   },
   "devDependencies": {
-    "@alfa/test": "^0.0.0"
+    "@alfa/test": "^0.0.0",
+    "typescript": "^2.7.2"
   }
 }
