--- a/packages/style/package.json
+++ b/packages/style/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@alfa/rule",
+  "name": "@alfa/style",
   "version": "0.0.0",
   "description": "alfa!",
   "main": "dist/index.js",
   "types": "src/index.ts",
-  "repository": "https://github.com/siteimprove/alfa/tree/master/packages/rule",
+  "repository":
+    "https://github.com/siteimprove/alfa/tree/master/packages/style",
   "contributors": ["Kasper Isager <kki@siteimprove.com>"],
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@alfa/dom": "^0.0.0",
-    "@alfa/style": "^0.0.0"
+    "@alfa/css": "^0.0.0"
   },
   "devDependencies": {
     "@alfa/test": "^0.0.0",
