--- a/packages/scrape/package.json
+++ b/packages/scrape/package.json
@@ -16,7 +16,8 @@
     "@types/browserify": "^12.0.33",
     "@types/puppeteer": "^1.0.0",
     "browserify": "^14.5.0",
-    "puppeteer": "^1.0.0"
+    "puppeteer": "^1.0.0",
+    "tinyify": "^2.4.0"
   },
   "devDependencies": {
     "@alfa/test": "^0.0.0",
