--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "target": "es2015",
     "jsx": "react",
     "jsxFactory": "jsx",
+    "declaration": true,
     "sourceMap": true,
-    "noEmit": true,
     "strict": true
   }
 }
