--- a/package.json
+++ b/package.json
@@ -13,6 +13,16 @@
   },
   "workspaces": ["packages/*"],
   "devDependencies": {
+    "@foreman/api": "^0.0.0",
+    "@foreman/cli": "^0.0.0",
+    "@foreman/fs": "^0.0.0",
+    "@foreman/git": "^0.0.0",
+    "@foreman/notify": "^0.0.0",
+    "@foreman/path": "^0.0.0",
+    "@foreman/prettier": "^0.0.0",
+    "@foreman/register": "^0.0.0",
+    "@foreman/tap": "^0.0.0",
+    "@foreman/typescript": "^0.0.1",
     "hjson": "^3.1.0",
     "husky": "^0.14.3",
     "lerna": "^2.8.0",
