--- a/packages/jsx/package.json
+++ b/packages/jsx/package.json
@@ -3,14 +3,11 @@
   "version": "0.0.0",
   "description": "alfa!",
   "main": "dist/index.js",
-  "types": "src/index.ts",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/siteimprove/alfa/tree/master/packages/jsx",
   "contributors": ["Kasper Isager <kki@siteimprove.com>"],
   "license": "MIT",
   "private": true,
-  "dependencies": {
-    "@alfa/dom": "^0.0.0"
-  },
   "devDependencies": {
     "@alfa/test": "^0.0.0",
     "typescript": "^2.7.2"
