--- a/packages/rule/package.json
+++ b/packages/rule/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "description": "alfa!",
   "main": "dist/index.js",
-  "types": "src/index.ts",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/siteimprove/alfa/tree/master/packages/rule",
   "contributors": ["Kasper Isager <kki@siteimprove.com>"],
   "license": "MIT",
   "private": true,
   "dependencies": {
     "@alfa/dom": "^0.0.0",
+    "@alfa/layout": "^0.0.0",
     "@alfa/style": "^0.0.0"
   },
   "devDependencies": {
