--- a/packages/scrape/package.json
+++ b/packages/scrape/package.json
@@ -10,9 +10,9 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@alfa/act": "^0.0.0",
     "@alfa/dom": "^0.0.0",
     "@alfa/pickle": "^0.0.0",
-    "@alfa/rule": "^0.0.0",
     "@types/browserify": "^12.0.33",
     "@types/circular-json": "^0.4.0",
     "@types/puppeteer": "^1.1.0",
