--- a/packages/wcag/package.json
+++ b/packages/wcag/package.json
@@ -9,8 +9,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@alfa/dom": "^0.0.0",
-    "@alfa/rule": "^0.0.0"
+    "@alfa/act": "^0.0.0",
+    "@alfa/dom": "^0.0.0"
   },
   "devDependencies": {
     "@alfa/test": "^0.0.0",
