--- a/packages/act/package.json
+++ b/packages/act/package.json
@@ -10,9 +10,7 @@
   "private": true,
   "dependencies": {
     "@alfa/dom": "^0.0.0",
-    "@alfa/layout": "^0.0.0",
-    "@alfa/markdown": "^0.0.0",
-    "@alfa/style": "^0.0.0"
+    "@alfa/markdown": "^0.0.0"
   },
   "devDependencies": {
     "@alfa/test": "^0.0.0",
