--- a/packages/pickle/package.json
+++ b/packages/pickle/package.json
@@ -11,8 +11,7 @@
   "private": true,
   "dependencies": {
     "@alfa/css": "^0.0.0",
-    "@alfa/dom": "^0.0.0",
-    "@alfa/layout": "^0.0.0"
+    "@alfa/dom": "^0.0.0"
   },
   "devDependencies": {
     "@alfa/test": "^0.0.0",
