--- a/packages/scrape/package.json
+++ b/packages/scrape/package.json
@@ -16,8 +16,7 @@
     "@types/browserify": "^12.0.33",
     "@types/puppeteer": "^1.3.1",
     "browserify": "^16.1.1",
-    "puppeteer": "^1.3.0",
-    "tinyify": "^2.4.0"
+    "puppeteer": "^1.3.0"
   },
   "devDependencies": {
     "@alfa/test": "^0.0.0",
