Move everything to the @siteimprove npm org
@alfa was already taken :cry:

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alfa",
+  "name": "@siteimprove/alfa",
   "description": "alfa!",
   "repository": "https://github.com/siteimprove/alfa",
   "contributors": ["Kasper Isager <kki@siteimprove.com>"],
