--- a/packages/act/package.json
+++ b/packages/act/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@alfa/act",
+  "name": "@siteimprove/alfa-act",
   "version": "0.0.0",
   "description": "alfa!",
   "main": "dist/index.js",
@@ -9,11 +9,11 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@alfa/dom": "^0.0.0",
-    "@alfa/markdown": "^0.0.0"
+    "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-markdown": "^0.0.0"
   },
   "devDependencies": {
-    "@alfa/test": "^0.0.0",
+    "@siteimprove/alfa-test": "^0.0.0",
     "typescript": "^2.8.3"
   }
 }
