--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@alfa/dom",
+  "name": "@siteimprove/alfa-dom",
   "version": "0.0.0",
   "description": "alfa!",
   "main": "dist/index.js",
@@ -9,12 +9,12 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@alfa/crypto": "^0.0.0",
-    "@alfa/css": "^0.0.0",
-    "@alfa/jsx": "^0.0.0"
+    "@siteimprove/alfa-crypto": "^0.0.0",
+    "@siteimprove/alfa-css": "^0.0.0",
+    "@siteimprove/alfa-jsx": "^0.0.0"
   },
   "devDependencies": {
-    "@alfa/test": "^0.0.0",
+    "@siteimprove/alfa-test": "^0.0.0",
     "typescript": "^2.8.3"
   }
 }
