--- a/packages/iana/package.json
+++ b/packages/iana/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@alfa/iana",
+  "name": "@siteimprove/alfa-iana",
   "version": "0.0.0",
   "description": "alfa!",
   "main": "dist/index.js",
@@ -12,10 +12,10 @@
     "prepare": "foreman build/subtags.ts"
   },
   "dependencies": {
-    "@alfa/util": "^0.0.0"
+    "@siteimprove/alfa-util": "^0.0.0"
   },
   "devDependencies": {
-    "@alfa/test": "^0.0.0",
+    "@siteimprove/alfa-test": "^0.0.0",
     "@types/got": "^8.3.1",
     "@types/node": "^10.0.4",
     "got": "^8.3.1",
