--- a/packages/jsx/package.json
+++ b/packages/jsx/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@alfa/jsx",
+  "name": "@siteimprove/alfa-jsx",
   "version": "0.0.0",
   "description": "alfa!",
   "main": "dist/index.js",
@@ -9,7 +9,7 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "@alfa/test": "^0.0.0",
+    "@siteimprove/alfa-test": "^0.0.0",
     "typescript": "^2.8.3"
   }
 }
