--- a/packages/pickle/package.json
+++ b/packages/pickle/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@alfa/pickle",
+  "name": "@siteimprove/alfa-pickle",
   "version": "0.0.0",
   "description": "alfa!",
   "main": "dist/index.js",
@@ -10,11 +10,11 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@alfa/css": "^0.0.0",
-    "@alfa/dom": "^0.0.0"
+    "@siteimprove/alfa-css": "^0.0.0",
+    "@siteimprove/alfa-dom": "^0.0.0"
   },
   "devDependencies": {
-    "@alfa/test": "^0.0.0",
+    "@siteimprove/alfa-test": "^0.0.0",
     "typescript": "^2.8.3"
   }
 }
