--- a/packages/scrape/package.json
+++ b/packages/scrape/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@alfa/scrape",
+  "name": "@siteimprove/alfa-scrape",
   "version": "0.0.0",
   "description": "alfa!",
   "main": "dist/index.js",
@@ -10,16 +10,16 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@alfa/act": "^0.0.0",
-    "@alfa/dom": "^0.0.0",
-    "@alfa/pickle": "^0.0.0",
+    "@siteimprove/alfa-act": "^0.0.0",
+    "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-pickle": "^0.0.0",
     "@types/browserify": "^12.0.33",
     "@types/puppeteer": "^1.3.1",
     "browserify": "^16.1.1",
     "puppeteer": "^1.3.0"
   },
   "devDependencies": {
-    "@alfa/test": "^0.0.0",
+    "@siteimprove/alfa-test": "^0.0.0",
     "typescript": "^2.8.3"
   }
 }
