--- a/packages/alfa-wcag/package.json
+++ b/packages/alfa-wcag/package.json
@@ -11,7 +11,8 @@
   "private": true,
   "dependencies": {
     "@siteimprove/alfa-act": "^0.0.0",
-    "@siteimprove/alfa-dom": "^0.0.0"
+    "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-lang": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0",
