--- a/packages/alfa-wcag/package.json
+++ b/packages/alfa-wcag/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@siteimprove/alfa-act": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-iana": "^0.0.0",
     "@siteimprove/alfa-lang": "^0.0.0"
   },
   "devDependencies": {
