--- a/packages/alfa-aria/package.json
+++ b/packages/alfa-aria/package.json
@@ -14,7 +14,7 @@
     "@siteimprove/alfa-util": "^0.0.0"
   },
   "devDependencies": {
-    "@siteimprove/alfa-test": "^0.0.0",
-    "typescript": "^2.8.3"
+    "@siteimprove/alfa-jsx": "^0.0.0",
+    "@siteimprove/alfa-test": "^0.0.0"
   }
 }
