--- a/packages/alfa-crypto/package.json
+++ b/packages/alfa-crypto/package.json
@@ -14,7 +14,6 @@
     "sjcl": "^1.0.7"
   },
   "devDependencies": {
-    "@siteimprove/alfa-test": "^0.0.0",
-    "typescript": "^2.8.3"
+    "@siteimprove/alfa-test": "^0.0.0"
   }
 }
