--- a/packages/alfa-iana/package.json
+++ b/packages/alfa-iana/package.json
@@ -20,7 +20,6 @@
     "@types/got": "^8.3.1",
     "@types/node": "^10.0.4",
     "got": "^8.3.1",
-    "record-jar": "^1.0.4",
-    "typescript": "^2.8.3"
+    "record-jar": "^1.0.4"
   }
 }
