--- a/packages/alfa-lang/package.json
+++ b/packages/alfa-lang/package.json
@@ -13,7 +13,6 @@
     "@siteimprove/alfa-util": "0.0.0"
   },
   "devDependencies": {
-    "@siteimprove/alfa-test": "^0.0.0",
-    "typescript": "^2.8.3"
+    "@siteimprove/alfa-test": "^0.0.0"
   }
 }
