--- a/packages/alfa-markdown/package.json
+++ b/packages/alfa-markdown/package.json
@@ -16,7 +16,6 @@
     "vfile": "^3.0.0"
   },
   "devDependencies": {
-    "@siteimprove/alfa-test": "^0.0.0",
-    "typescript": "^2.8.3"
+    "@siteimprove/alfa-test": "^0.0.0"
   }
 }
