--- a/packages/alfa-wcag/package.json
+++ b/packages/alfa-wcag/package.json
@@ -16,7 +16,7 @@
     "@siteimprove/alfa-lang": "^0.0.0"
   },
   "devDependencies": {
-    "@siteimprove/alfa-test": "^0.0.0",
-    "typescript": "^2.8.3"
+    "@siteimprove/alfa-jsx": "^0.0.0",
+    "@siteimprove/alfa-test": "^0.0.0"
   }
 }
