--- a/packages/alfa-pickle/tsconfig.json
+++ b/packages/alfa-pickle/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "include": ["src/**/*.ts"],
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "lib": ["es2015", "dom"]
   }
 }
