--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2015",
+    "lib": ["es2015"],
     "jsx": "react",
     "jsxFactory": "jsx",
     "declaration": true,
