--- a/packages/alfa-scrape/package.json
+++ b/packages/alfa-scrape/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@siteimprove/alfa-dom": "^0.0.0",
-    "@siteimprove/alfa-pickle": "^0.0.0",
+    "@siteimprove/alfa-util": "^0.0.0",
     "@types/browserify": "^12.0.33",
     "@types/puppeteer": "^1.3.1",
     "browserify": "^16.1.1",
