--- a/packages/alfa-dom/package.json
+++ b/packages/alfa-dom/package.json
@@ -11,7 +11,9 @@
   "private": true,
   "dependencies": {
     "@siteimprove/alfa-crypto": "^0.0.0",
-    "@siteimprove/alfa-css": "^0.0.0"
+    "@siteimprove/alfa-css": "^0.0.0",
+    "@siteimprove/alfa-lang": "^0.0.0",
+    "@siteimprove/alfa-util": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-jsx": "^0.0.0",
