--- a/packages/alfa-html/package.json
+++ b/packages/alfa-html/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@siteimprove/alfa-lang": "^0.0.0"
+    "@siteimprove/alfa-lang": "^0.0.0",
+    "@siteimprove/alfa-util": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
