--- a/packages/alfa-jsx/package.json
+++ b/packages/alfa-jsx/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@siteimprove/alfa-util": "^0.0.0",
     "@siteimprove/alfa-test": "^0.0.0"
   }
 }
