--- a/packages/alfa-wcag/package.json
+++ b/packages/alfa-wcag/package.json
@@ -13,7 +13,8 @@
     "@siteimprove/alfa-act": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-iana": "^0.0.0",
-    "@siteimprove/alfa-lang": "^0.0.0"
+    "@siteimprove/alfa-lang": "^0.0.0",
+    "@siteimprove/alfa-util": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-jsx": "^0.0.0",
