Explicitly set root directories in TypeScript configurations

--- a/packages/alfa-scrape/tsconfig.json
+++ b/packages/alfa-scrape/tsconfig.json
@@ -3,6 +3,7 @@
   "include": ["src/**/*.ts"],
   "compilerOptions": {
     "outDir": "dist",
+    "rootDir": "src",
     "lib": ["es2015", "dom"]
   }
 }
