--- a/packages/alfa-dom/package.json
+++ b/packages/alfa-dom/package.json
@@ -16,6 +16,7 @@
     "@siteimprove/alfa-util": "^0.0.0"
   },
   "devDependencies": {
+    "@siteimprove/alfa-bench": "^0.0.0",
     "@siteimprove/alfa-jsx": "^0.0.0",
     "@siteimprove/alfa-test": "^0.0.0"
   }
