--- a/packages/alfa-markdown/package.json
+++ b/packages/alfa-markdown/package.json
@@ -4,13 +4,14 @@
   "description": "alfa!",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "repository":
-    "https://github.com/siteimprove/alfa/tree/master/packages/alfa-markdown",
-  "contributors": ["Kasper Isager <kki@siteimprove.com>"],
+  "repository": "https://github.com/siteimprove/alfa/tree/master/packages/alfa-markdown",
+  "contributors": [
+    "Kasper Isager <kki@siteimprove.com>"
+  ],
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@types/node": "^9.4.7",
+    "@types/node": "^10.3.1",
     "remark-parse": "^5.0.0",
     "remark-stringify": "^5.0.0",
     "vfile": "^3.0.0"
