--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
-  "lerna": "2.8.0",
-  "version": "independent",
+  "lerna": "2.9.0",
+  "version": "0.0.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "packages": ["packages/*"]
