--- a/packages/alfa-scrape/package.json
+++ b/packages/alfa-scrape/package.json
@@ -4,15 +4,16 @@
   "description": "alfa!",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "repository":
-    "https://github.com/siteimprove/alfa/tree/master/packages/alfa-scrape",
-  "contributors": ["Kasper Isager <kki@siteimprove.com>"],
+  "repository": "https://github.com/siteimprove/alfa/tree/master/packages/alfa-scrape",
+  "contributors": [
+    "Kasper Isager <kki@siteimprove.com>"
+  ],
   "license": "MIT",
   "private": true,
   "dependencies": {
     "@siteimprove/alfa-dom": "^0.0.0",
-    "@types/puppeteer": "^1.3.1",
-    "puppeteer": "^1.3.0"
+    "@types/puppeteer": "^1.3.2",
+    "puppeteer": "^1.4.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
