Remove Markdown package

--- a/packages/alfa-act/package.json
+++ b/packages/alfa-act/package.json
@@ -4,14 +4,14 @@
   "description": "alfa!",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "repository":
-    "https://github.com/siteimprove/alfa/tree/master/packages/alfa-act",
-  "contributors": ["Kasper Isager <kki@siteimprove.com>"],
+  "repository": "https://github.com/siteimprove/alfa/tree/master/packages/alfa-act",
+  "contributors": [
+    "Kasper Isager <kki@siteimprove.com>"
+  ],
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@siteimprove/alfa-dom": "^0.0.0",
-    "@siteimprove/alfa-markdown": "^0.0.0"
+    "@siteimprove/alfa-dom": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-jsx": "^0.0.0",
