--- a/packages/alfa-scrape/package.json
+++ b/packages/alfa-scrape/package.json
@@ -2,8 +2,8 @@
   "name": "@siteimprove/alfa-scrape",
   "version": "0.0.0",
   "description": "alfa!",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.js",
+  "types": "src/index.d.ts",
   "repository": "https://github.com/siteimprove/alfa/tree/master/packages/alfa-scrape",
   "contributors": [
     "Kasper Isager <kki@siteimprove.com>"
