--- a/packages/alfa-iana/package.json
+++ b/packages/alfa-iana/package.json
@@ -1,15 +1,17 @@
 {
+  "private": true,
   "name": "@siteimprove/alfa-iana",
+  "author": "Siteimprove A/S",
+  "homepage": "https://github.com/siteimprove/alfa",
   "version": "0.0.0",
+  "license": "MIT",
   "description": "alfa!",
-  "main": "src/index.js",
-  "types": "src/index.d.ts",
-  "repository": "https://github.com/siteimprove/alfa/tree/master/packages/alfa-iana",
   "contributors": [
     "Kasper Isager <kki@siteimprove.com>"
   ],
-  "license": "MIT",
-  "private": true,
+  "repository": "https://github.com/siteimprove/alfa/tree/master/packages/alfa-iana",
+  "main": "src/index.js",
+  "types": "src/index.d.ts",
   "scripts": {
     "prepare": "node build/subtags.js"
   },
