Optimise `.gitignore` checking

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chalk": "^2.4.1",
     "figures": "^2.0.0",
     "husky": "^0.14.3",
+    "ignore": "^3.3.8",
     "lerna": "^2.9.0",
     "prettier": "1.13.5",
     "signale": "^1.1.0",
