--- a/packages/alfa-bench/package.json
+++ b/packages/alfa-bench/package.json
@@ -2,14 +2,22 @@
   "private": true,
   "name": "@siteimprove/alfa-bench",
   "author": "Siteimprove A/S",
-  "homepage": "https://github.com/siteimprove/alfa",
+  "homepage": "https://siteimprove.com",
   "version": "0.0.0",
   "license": "MIT",
-  "description": "alfa!",
+  "description": "Suite of open and standards-based tools for performing reliable accessibility conformance testing at scale",
+  "keywords": [
+    "a11y",
+    "accessibility",
+    "aria",
+    "typescript",
+    "wcag"
+  ],
   "contributors": [
     "Kasper Isager <kki@siteimprove.com>"
   ],
-  "repository": "https://github.com/siteimprove/alfa/tree/master/packages/alfa-bench",
+  "repository": "https://github.com/siteimprove/alfa",
+  "bugs": "https://github.com/siteimprove/alfa/issues",
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "dependencies": {
