--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "typescript",
     "wcag"
   ],
+  "contributors": [
+    "Kasper Isager <kki@siteimprove.com>",
+    "Búgvi Magnussen <bbm@siteimprove.com>"
+  ],
   "repository": "https://github.com/siteimprove/alfa",
   "bugs": "https://github.com/siteimprove/alfa/issues",
   "scripts": {
