--- a/packages/alfa-jsx/package.json
+++ b/packages/alfa-jsx/package.json
@@ -14,7 +14,8 @@
     "wcag"
   ],
   "contributors": [
-    "Kasper Isager <kki@siteimprove.com>"
+    "Kasper Isager <kki@siteimprove.com>",
+    "Búgvi Magnussen <bbm@siteimprove.com>"
   ],
   "repository": "https://github.com/siteimprove/alfa",
   "bugs": "https://github.com/siteimprove/alfa/issues",
